2011-12-06  Dimitri Glazkov  <dglazkov@chromium.org>

        Unreviewed, rolling out r102091.
        http://trac.webkit.org/changeset/102091
        https://bugs.webkit.org/show_bug.cgi?id=73711

        Caused Clang Linux compile failure.

        * tests/LayerChromiumTest.cpp:

2011-12-06  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r102102.
        http://trac.webkit.org/changeset/102102
        https://bugs.webkit.org/show_bug.cgi?id=73925

        Causes segmentation fault on chromium unit_tests,
        content_unittests, sync_unit_tests (Requested by vsevik on
        #webkit).

        * features.gypi:

2011-12-06  Vsevolod Vlasov  <vsevik@chromium.org>

        Unreviewed chromium expectations update.

        * tests/KURLTest.cpp:
        (ComponentCase::TEST):

2011-12-06  Eric Penner  <epenner@google.com>

        [chromium] Set texture limits as multiples of viewport size instead of hardcoded values
        https://bugs.webkit.org/show_bug.cgi?id=72202

        Reviewed by James Robinson.

        * tests/TiledLayerChromiumTest.cpp:
        (WTF::TEST):

2011-12-06  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r102043.
        http://trac.webkit.org/changeset/102043
        https://bugs.webkit.org/show_bug.cgi?id=73898

        Breaks chromium mac-cg compilation. (Requested by vsevik on
        #webkit).

        * WebKit.gypi:
        * tests/ImageLayerChromiumTest.cpp: Removed.

2011-12-05  Rafael Weinstein  <rafaelw@chromium.org>

        [MutationObservers] Enable in Chromium trunk
        https://bugs.webkit.org/show_bug.cgi?id=73851

        Reviewed by Ojan Vafai.

        * features.gypi:

2011-12-05  James Robinson  <jamesr@chromium.org>

        chromium build fix

        * src/WebLayerTreeView.cpp:

2011-12-05  James Robinson  <jamesr@chromium.org>

        Rollout http://trac.webkit.org/changeset/102019, dependent has not
        landed in chromium

        * WebKit.gyp: